[tool.poetry]
name = "research-exercise"
version = "0.1.0"
description = "project for exercise"
authors = ["zaemon1251-hesty <hisakawa1251@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
torchvision= "^0.15.0"
lightning = "^2.0.0"
torchmetrics = "^0.11.4"
hydra-core = "1.3.2"
hydra-colorlog = "1.2.0"
hydra-optuna-sweeper = "1.2.0"
wandb = "*"
neptune-client = "*"
mlflow = "*"
# comet-ml
# aim>=3.16.2  # no lower than 3.16.2, see https://github.com/aimhubio/aim/issues/2550
# --------- others --------- #
pyrootutils = "*"     # standardizing the project root setup
pre-commit = "*"     # hooks for applying linters on commit
rich = "*"           # beautiful text formatting in terminal

# sh            # for running bash commands in some tests (linux/macos only)
[tool.poetry.dev-dependencies]
black = "^23.3"
isort = "^5.10.1"
pyproject-flake8 = "^0.0.1-alpha.2"
mypy = "^0.910"
pytest = "^5.2"

[tool.black]
target-version = ['py39']
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_local_folder=['config',]

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,W503,"

[tool.mypy]
python_version = "3.9"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true


[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
