[tool.poetry]
name = "research-exercise"
version = "0.1.0"
description = "project for exercise"
authors = ["zaemon1251-hesty <hisakawa1251@gmail.com>"]
packages = [
    { include = "src" },
]


[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "1.3.2"
hydra-colorlog = "1.2.0"
hydra-optuna-sweeper = "1.2.0"
mlflow = "^2.3.0"
pyrootutils = "^1.0.4"
pre-commit = "^3.2.2"
rich = "^13.3.4"
pytest = "^7.3.1"
lightning = "^2.0.1.post0"
wandb = "^0.15.0"
fastapi = ">=0.80"
torchvision = "^0.15.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
pyproject-flake8 = "^6.0.0.post1"
isort = "^5.12.0"
mypy = "^1.2.0"
yapf = "^0.33.0"
black = "^23.3.0"
autopep8 = "^2.0.2"


[tool.black]
target-version = ['py310']
line-length = 120


[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_local_folder=['config',]


[tool.mypy]
python_version = "3.10"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = 'google.cloud.*'
ignore_missing-imports = true

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.flake8]
max-line-length = 200
max-complexity = 18
ignore = "E203,E266,W503,E402"
max-doc-length = 1000
